feat: add weekly offering item management